--- a/Assignments/1.html
+++ b/Assignments/1.html
@@ -82,9 +82,8 @@
         <p>2016.04.08</p>
         <p><strong>Track Produced by</strong> 류재현 Of Vibe<br>
         <strong>Vocal Directed by</strong> 류재현 Of Vibe
-
-Background Vocal by 강태우
-Drum Performed by 신석철
+        <strong>Background Vocal by</strong> 강태우
+        <strong>Drum Performed by</strong> 신석철
 Bass Performed by 최훈
 Guitar Performed by 정수완
 Recorded by 이민규 @ S.M. Yellow Tail Studio / 정기홍, 박무일, 지용주 @ Seoul Studio
