--- a/Assignments/1.html
+++ b/Assignments/1.html
@@ -3,16 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome to HEIZE WORLD</title>
+    <img src="헤이즈모음.png" alt="헤이즈">
   </head>
 
   <body>
     <h1><strong>THE HEIZE WORLD</strong></h1>
     <video src="저 별.mp4" autoplay poster="저별autoplay.jpg">
     </video>
-    <figure>
-      <img src="heize.jpg" alt="Heize">
-      <img src="heize and july.jpg" alt="Heize_And July">
-    </figure>
 
     <section>
       <h2>About Heize</h2>
