--- a/Assignments/1.html
+++ b/Assignments/1.html
@@ -28,7 +28,7 @@
 
       <section>
         <h2>Albums</h2>
-        <h3>조금만 더 방황하고</h3>
+        <h3>"조금만 더 방황하고"</h3>
         <a href="http://www.melon.com/album/detail.htm?albumId=2227048" target="_blank">
           <img src="조금만 더 방황하고.jpg" alt="조금만 더 방황하고">
         </a>
@@ -40,7 +40,7 @@
           크루셜스타 (Crucial Star)가 피쳐링으로 참여하고 지슬로우 (G-Slow)가 프로듀싱으로 참여한 이 곡은<br>
           차갑게 얼어붙은듯한 분위기와 우울한 이별 메세지를 담고 있는 듀엣곡이다.</p>
 
-        <h3>클럽이라도 좀 가</h3>
+        <h3>"클럽이라도 좀 가"</h3>
         <a href="http://www.melon.com/song/detail.htm?songId=4536059" target="_blank">
           <img src="클럽이라도 좀 가.jpg" alt="클럽이라도 좀 가">
         </a>
@@ -50,7 +50,7 @@
           <strong>편곡</strong> 브라더수(BrotherSu)</p>
         <p>신예 여성 힙합 뮤지션 헤이즈(Heize)가 첫 미니앨범 <strong>[HEIZE]</strong>를 발표했다.</p>
 
-        <h3>내 남자친구가 고맙대</h3>
+        <h3>"내 남자친구가 고맙대"</h3>
         <a href="http://www.melon.com/album/detail.htm?albumId=2299999" target="_blank">
         <img src="내 남자친구가 고맙대.jpg" alt="내 남자친구가 고맙대">
         </a>
@@ -62,7 +62,7 @@
         <p><strong>[내 남자친구가 고맙대]</strong>는 제목에서 알 수 있듯, 자신을 차버린 전 남자친구에게 현재의 남자친구가 미움보단 고마움을 느끼고 있다는 걸 이야기하는 곡이다.<br>
           헤이즈는 전 남자친구와의 이별이 가져다준 새로운 만남이 행복하다는 걸 풀어내며, "그렇게 네가 내 곁을 떠나 준 덕분에 난 더 좋은 사람을 만나 행복하게 잘 살아가고 있다"는 메시지를 전한다.</p>
 
-        <h3>품 스윗 품 (Pume Sweet Pume)</h3>
+        <h3>"품 스윗 품 (Pume Sweet Pume)"</h3>
         <a href="http://www.melon.com/album/detail.htm?albumId=2322339" target="_blank">
         <img src="품스윗품.jpg" alt="품 스윗 품 (Pume Sweet Pume)"></a>
         <p>2015.06.05</p>
@@ -73,7 +73,7 @@
            <strong>Mastered by</strong> 전훈 @Sonic Korea </p>
         <p>홈 스윗 홈(Home Sweet Home)의 사전적 의미인 "집이 최고다"와 같이, 권태를 느끼고 떠난 후 얼마 지나지 않아 다시 돌아온 연인에게 "역시 내 품이 최고지?"라고 말하는 메세지를 담아내고 있는 곡이다.</p>
 
-        <h3>썸타 (Lil' Something)</h3>
+        <h3>"썸타 (Lil' Something)"</h3>
         <a href="http://www.melon.com/album/detail.htm?albumId=2678416">
         <img src="썸타.jpg" alt="썸타 (Lil' Something)"></a>
         <p>2016.04.08</p>
@@ -81,12 +81,12 @@
         <strong>Vocal Directed by</strong> 류재현 Of Vibe
         <strong>Background Vocal by</strong> 강태우
         <strong>Drum Performed by</strong> 신석철
-Bass Performed by 최훈
-Guitar Performed by 정수완
-Recorded by 이민규 @ S.M. Yellow Tail Studio / 정기홍, 박무일, 지용주 @ Seoul Studio
-Digital Editing by 장우영 @ doobdoob Studio
-Mixed by 구종필 (BEAT BURGER) @ S.M. Yellow Tail Studio
-Mastered by Tom Coyne @ Sterling Sound</p>
+        <strong>Bass Performed by</strong> 최훈
+        <strong>Guitar Performed by</strong> 정수완
+        <strong>Recorded by</strong> 이민규 @ S.M. Yellow Tail Studio / 정기홍, 박무일, 지용주 @ Seoul Studio
+        <strong>Digital Editing by</strong> 장우영 @ doobdoob Studio
+        <strong>Mixed by</strong> 구종필 (BEAT BURGER) @ S.M. Yellow Tail Studio
+        <strong>Mastered by</strong> Tom Coyne @ Sterling Sound</p>
       </section>
 
   </body>
