너먹구름비

--- a/Assignments/1.html
+++ b/Assignments/1.html
@@ -40,9 +40,9 @@
           크루셜스타 (Crucial Star)가 피쳐링으로 참여하고 지슬로우 (G-Slow)가 프로듀싱으로 참여한 이 곡은<br>
           차갑게 얼어붙은듯한 분위기와 우울한 이별 메세지를 담고 있는 듀엣곡이다.</p>
 
-        <h3>"클럽이라도 좀 가"</h3>
-        <a href="http://www.melon.com/song/detail.htm?songId=4536059" target="_blank">
-          <img src="클럽이라도 좀 가.jpg" alt="클럽이라도 좀 가">
+        <h3>"Heize"</h3>
+        <a href="http://www.melon.com/album/detail.htm?albumId=2243967" target="_blank">
+          <img src="HEIZE.jpg" alt="HEIZE">
         </a>
         <p>2014.03.21</p>
         <p><strong>작사</strong> 헤이즈(Heize)<br>
@@ -73,25 +73,45 @@
            <strong>Mastered by</strong> 전훈 @Sonic Korea </p>
         <p>홈 스윗 홈(Home Sweet Home)의 사전적 의미인 "집이 최고다"와 같이, 권태를 느끼고 떠난 후 얼마 지나지 않아 다시 돌아온 연인에게 "역시 내 품이 최고지?"라고 말하는 메세지를 담아내고 있는 곡이다.</p>
 
-        <h3>"썸타 (Lil' Something)"</h3>
-        <a href="http://www.melon.com/album/detail.htm?albumId=2678416">
-        <img src="썸타.jpg" alt="썸타 (Lil' Something)"></a>
-        <p>2016.04.08</p>
-        <p><strong>Track Produced by</strong> 류재현 Of Vibe<br>
-        <strong>Vocal Directed by</strong> 류재현 Of Vibe
-        <strong>Background Vocal by</strong> 강태우
-        <strong>Drum Performed by</strong> 신석철
-        <strong>Bass Performed by</strong> 최훈
-        <strong>Guitar Performed by</strong> 정수완
-        <strong>Recorded by</strong> 이민규 @ S.M. Yellow Tail Studio / 정기홍, 박무일, 지용주 @ Seoul Studio
-        <strong>Digital Editing by</strong> 장우영 @ doobdoob Studio
-        <strong>Mixed by</strong> 구종필 (BEAT BURGER) @ S.M. Yellow Tail Studio
-        <strong>Mastered by</strong> Tom Coyne @ Sterling Sound</p>
-
         <h3>"돌아오지마 (Feat. 용준형 of 비스트)"</h3>
         <a href="http://www.melon.com/album/detail.htm?albumId=2679308">
         <img src="돌아오지마.jpg" alt="돌아오지마"></a>
-      </section>
+        <p>2016.04.14</p>
+        <p><strong>작사</strong> 헤이즈(Heize), 용준형<br>
+          <strong>작곡</strong> 헤이즈(Heize), 브라더수(BrotherSu)<br>
+          <strong>편곡</strong> 브라더수(BrotherSu)<br>
+          <strong>vocal arranged by</strong> 헤이즈(Heize)<br>
+          <strong>chorus by</strong> 헤이즈(Heize)<br>
+          <strong>guitar by</strong> 유웅렬<br>
+          <strong>piano by</strong> d.ear<br>
+          <strong>mixed by</strong> 고현정 @Dr.Ko Studio<br>
+          <strong>mastered by</strong> 권남우 @JFS Studio</p>
+        <p>'니가 아니면 돌아오지마.'</p>
 
-  </body>
+        <h3>"And July (Feat. DEAN, DJ Friz)"</h3>
+        <a href="http://www.melon.com/album/detail.htm?albumId=2688360">
+        <img src="and july.jpg" alt="and july"></a>
+        <p>2016.07.18</p>
+        <p><strong>작사</strong> Deanfluenza, 헤이즈(Heize)<br>
+          <strong>작곡</strong> Deanfluenza, DK, JBird, 델리보이(Delly Boi), 신혁, Esta<br>
+          <strong>편곡</strong> JBird, 델리보이(Delly Boi), Esta</p>
+        <p>여느 때와 같이 전 앨범의 작사와 작곡에 주도적으로 참여하며 앨범에 애정을 쏟았고, 그 어느 때보다도 프로듀싱에 적극적으로 참여했다.<br>
+        헤이즈가 가진 감성의 17% 정도가 드러나는 앨범으로, 기존에 보여준 7%에 비해 헤이즈의 색이 확실히 더 짙고 선명해졌다.</p>
+
+        <h3>"저 별"</h3>
+        <a href="http://www.melon.com/album/detail.htm?albumId=10020656">
+        <img src="저 별.jpg" alt="저 별"></a>
+        <p>2016.12.05</p>
+        <p><strong>작사</strong> 헤이즈(Heize)<br>
+          <strong>작곡</strong> 헤이즈(Heize), 다비(Davii)<br>
+          <strong>편곡</strong> 다비(Davii)</p>
+        <p>이별한 모든 대상을 밤 하늘의 "별"에 비유했습니다.<br>
+          그 대상은 가족일 수도, 친구일 수도, 연인일 수도, 키우던 고양이일 수도, 다신 돌아갈 수 없는 모든 지나간 시간들일 수도...<br>
+          내 눈에 꼭 보이지 않아도, 행여 다시 볼 수도 잡을 수도 없다 해도 항상 그 자리에 있을 거란 믿음만으로 마음이 따뜻해질 것입니다.<br>
+          - 헤이즈 -</p>
+
+        <h3>"/// (너 먹구름 비)"</h3>
+        <a href="http://music.naver.com/album/index.nhn?albumId=2068309">
+        <img src="너먹구름비.jpg" alt="너 먹구름 비"></a>
+        <p>2017.06.26</p>
 </html>
